refactor(java): align V46 services (Exam, Grade, GradeHistory) with exact MCD schema